docs: update ARCHITECTURE.md to reflect post-migration state
Remove stale known risks for Java 3D/Applet, System.exit, and
Class.forName reflection dispatch — all three have been resolved
by the PR. Update System Flow, Reused Patterns, and Evidence
sections to document the current JavaFX/JmgenRegistry/FeaException
implementation.